fix: Config
update yaml and modules
