# docs/api/sidebar.ts
@@ -4,57 +4,39 @@ const sidebar: SidebarsConfig = {
   apisidebar: [
     {
       type: "doc",
-      id: "api/freights/swipload-integrations-api",
-    },
-    {
-      type: "category",
-      label: "Consignment",
-      link: {
-        type: "doc",
-        id: "api/freights/consignment",
-      },
-      collapsible: false,
-      items: [
-        {
-          type: "doc",
-          id: "api/freights/consignment-get",
-          label: "ConsignmentGet",
-          className: "api-method get",
-        },
-      ],
+      id: "api/swipload-integrations-api",
     },
     {
       type: "category",
       label: "Freight",
-      collapsible: false,
       items: [
         {
           type: "doc",
-          id: "api/freights/freight-create",
+          id: "api/freight-create",
           label: "Create a freight",
           className: "api-method post",
         },
         {
           type: "doc",
-          id: "api/freights/freight-update-freight",
+          id: "api/freight-update-freight",
           label: "FreightUpdateFreight",
           className: "api-method patch",
         },
         {
           type: "doc",
-          id: "api/freights/freight-patch-update-status",
+          id: "api/freight-patch-update-status",
           label: "Update freight status using patch",
           className: "api-method patch",
         },
         {
           type: "doc",
-          id: "api/freights/freight-patch-carriers-reference",
+          id: "api/freight-patch-carriers-reference",
           label: "Update Carriers Reference",
           className: "api-method patch",
         },
         {
           type: "doc",
-          id: "api/freights/freight-patch-shippers-reference",
+          id: "api/freight-patch-shippers-reference",
           label: "Update Shippers Reference",
           className: "api-method patch",
         },
@@ -62,12 +44,23 @@ const sidebar: SidebarsConfig = {
     },
     {
       type: "category",
-      label: "Shipment",
-      collapsible: false,
+      label: "Requirement",
       items: [
         {
           type: "doc",
-          id: "api/freights/shipment-create",
+          id: "api/requirement-get-list",
+          label: "Get the available freight requirements list",
+          className: "api-method get",
+        },
+      ],
+    },
+    {
+      type: "category",
+      label: "Shipment",
+      items: [
+        {
+          type: "doc",
+          id: "api/shipment-create",
           label: "Create a Shipment",
           className: "api-method post",
         },
